Closed
Bug 540778
Opened 16 years ago
Closed 14 years ago
Please remove "deliver mode" printf statement from nsMsgCompose::_SendMsg
Categories
(MailNews Core :: Composition, defect)
MailNews Core
Composition
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 6.0
People
(Reporter: wthrowe, Assigned: Usul)
References
Details
Attachments
(2 files, 2 obsolete files)
|
3.27 KB,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
|
5.34 KB,
patch
|
Usul
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1.6) Gecko/20100118 Gentoo IceCat/3.5.6 (like Firefox/3.5.6)
Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1.5) Gecko/20091228 Shredder/3.0
nsMsgCompose::_SendMsg in mailnews/compose/src/nsMsgCompose.cpp contains a printf line which causes sending, autosaving, and similar actions to print "deliver mode:" and some number to the terminal if thunderbird was started from a terminal. This is kind of annoying.
Please remove the printf or only enable it in debugging builds or something.
Reproducible: Always
Steps to Reproduce:
1. Send mail
2.
3.
Actual Results:
deliver mode: 0
is printed to my terminal
Expected Results:
Thunderbird shouldn't print anything to the terminal.
Updated•16 years ago
|
Component: General → Composition
Product: Thunderbird → MailNews Core
QA Contact: general → composition
Updated•16 years ago
|
Summary: Please remove printf statement from nsMsgCompose::_SendMsg → Please remove "deliver mode" printf statement from nsMsgCompose::_SendMsg
| Assignee | ||
Comment 2•14 years ago
|
||
Assignee: nobody → ludovic
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #530025 -
Flags: review?(dbienvenu)
Comment 3•14 years ago
|
||
Comment on attachment 530025 [details] [diff] [review]
Cleaning up debug statements
that patch has a lot of extra junk in it - you might want to do a targeted diff.
Attachment #530025 -
Flags: review?(dbienvenu) → review-
| Assignee | ||
Comment 4•14 years ago
|
||
Attachment #530025 -
Attachment is obsolete: true
Attachment #530027 -
Flags: review?(dbienvenu)
Comment 5•14 years ago
|
||
Comment on attachment 530027 [details] [diff] [review]
[checked in] cleanup debug statments
thx, rs=me
Attachment #530027 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Comment 6•14 years ago
|
||
Comment on attachment 530027 [details] [diff] [review]
[checked in] cleanup debug statments
I've checked this in: http://hg.mozilla.org/comm-central/rev/944c4eb2a8ed
However, I've got a feeling comment 0 was referring to the #ifdef NS_DEBUG statements in that file, not just these old ones.
Attachment #530027 -
Attachment description: cleanup debug statments → [checked in] cleanup debug statments
Updated•14 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 7•14 years ago
|
||
The printf wasn't at all protected by DEBUG statements. I was unsure about the NS_DEBUG so I've left them. Want a followup patch to remove them ?
| Assignee | ||
Comment 8•14 years ago
|
||
David shall I also clean up the NS_DEBUGs ?
Comment 9•14 years ago
|
||
(In reply to comment #8)
> David shall I also clean up the NS_DEBUGs ?
sure, that would be great.
| Assignee | ||
Comment 10•14 years ago
|
||
Attachment #530623 -
Flags: review?(mbanner)
Updated•14 years ago
|
Version: unspecified → Trunk
Comment 11•14 years ago
|
||
Comment on attachment 530623 [details] [diff] [review]
Part 2 remove NS_DEBUG too
I'm happy, but want to check David is too.
Attachment #530623 -
Flags: review?(mbanner) → review?(dbienvenu)
Comment 12•14 years ago
|
||
Comment on attachment 530623 [details] [diff] [review]
Part 2 remove NS_DEBUG too
yes, but these braces can go while you're at it:
{
-#ifdef NS_DEBUG
- printf("Failed to create mQuoteStreamListener\n");
-#endif
return NS_ERROR_FAILURE;
}
Attachment #530623 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Comment 13•14 years ago
|
||
patch for checkin
Attachment #530623 -
Attachment is obsolete: true
| Assignee | ||
Comment 14•14 years ago
|
||
Comment on attachment 531928 [details] [diff] [review]
Part 2 remove NS_DEBUG too with r comments addressed
carrying review flag
Attachment #531928 -
Flags: review+
| Assignee | ||
Updated•14 years ago
|
Keywords: checkin-needed
Comment 15•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-litmus-
Keywords: checkin-needed
OS: Linux → All
Hardware: x86_64 → All
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.4
You need to log in
before you can comment on or make changes to this bug.
Description
•