Bug 540778 - Clean up some old debug statements in nsMsgCompose.cpp. rs=bienvenu